styles.css
@import url("https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu:wght@500&display=swap");
@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600&display=swap");
body {
  font-family: "League Spartan", sans-serif;
  background-color: #001001;
  padding: 0 16px;
  display: flex;
  height: 100vh;
  align-items: center;
  background-size: cover;
  background-repeat: no-repeat;
}

body::after {
  content: "";
  width: 100%;
  height: 100vh;
  background: linear-gradient(-45deg, #001001, #2e536b, #564020, #001001);
  background-size: 400% 400%;
  animation: gradient 10s ease infinite;
  position: absolute;
  left: 0;
  top: 0;
  opacity: 0.8;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.fade-in {
  animation: fadeIn 1s ease-out;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@keyframes swipeLeft {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-100%);
  }
}

@keyframes swipeRight {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(100%);
  }
}

.swipe-left {
  animation: swipeLeft 0.5s forwards;
}

.swipe-right {
  animation: swipeRight 0.5s forwards;
}

a,
a:visited {
  color: #cb9b69 !important;
  text-decoration: none;
}

a:hover {
  color: #fff;
}

.btn-about {
  color: white;
  background-color: transparent;
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 1px;
  text-decoration: none;
  padding: 0;
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  z-index: 99;
}

.btn:focus {
  box-shadow: none !important;
}

.hidden {
  display: none;
}

#verseDisplay {
  border: 1px solid rgba(255, 255, 255, 0.5) !important;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border-radius: 12px;
  color: white;
  background-color: transparent;
  position: relative;
  z-index: 99;
}

/* #verseDisplay::after{
  content: "";
  width: 100%;
  height: 100%;
  background: linear-gradient(-45deg, #001001, #2e536b, #564020, #001001);
  background-size: 400% 400%;
  animation: gradient 10s ease infinite;
  position: absolute;
  left: 0;
  top: 0;
  border-radius: 6px;
  opacity: 0.8;
} */

#verseDisplay .surah::before {
  content: "";
  height: 1px;
  width: 100px;
  display: block;
  background: rgba(255, 255, 255, 0.5);
  margin: 24px 0;
}

#verseDisplay .verse,
#verseDisplay .surah {
  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
  position: relative;
  z-index: 9;
  text-align: left;
}

#verseDisplay .verse {
  margin-bottom: 0;
}

#verseDisplay.urdu-style {
  text-align: right;
  direction: rtl;
  word-wrap: normal;
}

#verseDisplay.urdu-style .verse {
  font-family: "Noto Nastaliq Urdu", serif;
  font-size: 16px;
  line-height: 250%;
  word-wrap: normal;
}

#verseDisplay.urdu-style .verse,
#verseDisplay.urdu-style .surah {
  text-align: right;
  direction: rtl;
  word-wrap: normal;
}

.logo {
  text-align: center;
  margin-bottom: 24px;
  padding-top: 24px;
  position: relative;
  z-index: 99;
}

.logo img {
  position: relative;
  width: 60px;
}

.verse {
  font-size: 24px;
  line-height: 140%;
  font-weight: 700;
}

.verse:first-letter {
  text-transform: uppercase;
}

.btn-custom {
  color: white !important;
  height: 44px;
  line-height: 34px;
  border-radius: 100px;
  width: 44px;
}

.btn-custom.one {
  background-color: #2e536b !important;
}

.btn-custom.two {
  background-color: #564020 !important;
}

.btn-custom.three {
  background-color: #cb9b69 !important;
}

.btn-custom.white {
  border-color: #fff !important;
  background-color: transparent !important;
}

.btn.disabled {
  opacity: 0.4 !important;
  pointer-events: none;
}

#langToggleBtn {
  background-color: transparent !important;
  color: #fff !important;
  border-radius: 100px;
  border: 0 !important;
  height: 44px;
  line-height: 34px;
  border-color: transparent !important;
  font-size: 20px;
}
#langToggleBtn:focus,
#langToggleBtn:active {
  border: 0 !important;
  border-color: transparent !important;
  box-shadow: none !important;
}

.btn-container {
  width: 100%;
  display: flex;
  gap: 12px;
  align-items: center;
  justify-content: space-between;
  margin-top: 12px;
}

.btn-container .left {
  display: flex;
  gap: 12px;
}

.modal-body p {
  font-size: 18px;
}

.footer {
  width: 100%;
  font-size: 12px;
  text-align: center;
  padding-bottom: 12px;
  color: #cb9b69;
  display: flex;
  flex-direction: column;
  gap: 12px;
  margin-top: 24px;
}

.swipe-instruction {
  text-align: center;
  font-size: 14px;
  justify-content: center;
  gap: 6px;
  align-items: center;
  padding: 0 0 12px 0;
  margin: 0;
  color: rgba(255, 255, 255, 0.2);
}

.swipe-instruction > span {
  font-size: 14px;
}

